# jupyter-api.nvim

./: .editorconfig  .envrc  CREDITS.org  Cargo.toml  connection_info.json  flake.nix
lua/: .luarc.json
lua/jupyter-api/: debug.lua  init.lua
lua/jupyter-api/rust/: init.lua  unwrapped.lua
nix/: default.nix  devshell.nix  nvim-dev.nix  nvim-plugin.nix  persystem-extra.nix  rust.nix
nvim-dev-config/: init.lua
src/: lib.rs
