[package]
name = "jupyter-api-nvim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.clippy]
unwrap_used = "forbid"
expect_used = "deny"

[dependencies]
jupyter-protocol = "0.11.0"
mlua = { version = "0.11.5", features = ["luajit", "serde", "async", "module"] }
once_cell = "1.21.3"
runtimelib = { version = "1.0.0", features = ["tokio-runtime"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "net"] }
uuid = "1.18.1"
zeromq = { version = "0.4.1", features = ["tokio-runtime"] }
